# EGS

./: .gitignore  CITATION.cff  Cargo.toml  README.md  goals
src/: eclass.rs  egraph.rs  enode.rs  id.rs  lib.rs  main.rs  pattern.rs  terms.rs  test.rs  unionfind.rs  util.rs
src/rulesets/: chain_ruleset.txt  commutivity_test.txt  factorial.txt  infinityA.txt  infinityB.txt  patternA.txt  patternB.txt  peano_ruleset.txt  recursive_rule.txt  rules.txt  rulesetA.txt  rulesetB.txt
src/test terms/ints/: add_zeros.txt  const_mult.txt  factorial.txt  mult_by_zero.txt  nested_add.txt  nested_example.txt
src/test terms/peano/: giga_sum.txt  sum.txt
src/testsuite/: chain.txt  test1.txt
src/testsuite/bools/: test1.txt
src/testsuite/ints/: add_zeros.txt  example.txt  mult.txt
src/testsuite/peano/: sum.txt
