[package]
name = "egs" #egraphs simple
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#for random numbers, purely to test term extraction
rand = "0.8.5"

#for plotting stuff
plotters = "0.3.1"



# hashmap stuff
fxhash = "0.2.1"
hashbrown = "0.12.1"
indexmap = "1.8.1"


# S expr
symbol_table = { version = "0.2.0", features = ["global"] }
symbolic_expressions = "5.0.3"

# fun fact, for some reason code vector == dynamically resizeable array
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }

vectorize = { version = "0.2.0", optional = true }


#egraph drawing
#serde_json = "1.0.45"

#error logging stuff
#thiserror = "1.0.31"
#log = "0.4.17"

#[dependencies.petgraph]
#version = "0.5.0"
#features = ["serde-1"]